[package]
name = "btc-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.17.0", features = ["full"] }
clap = { version = "3.1.2", features = ["derive"] }
rand = "0.8.4"
sha256= "1.5.0"
sha2 = "0.9"
hex = "0.4.3"
bitcoin = "0.26"
secp256k1 = "0.21"
bitcoin-script = "0.1.3"
serde_json = "1.0.117"



